[package]
name = "grin_wallet"
version = "0.3.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
workspace = '..'
publish = false

[dependencies]
blake2-rfc = "0.2"
byteorder = "1"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hyper = "0.12"
prettytable-rs = "0.7"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog = { version = "~2.3", features = ["max_level_trace", "release_max_level_trace"] }
term = "0.5"
tokio = "0.1.7"
tokio-core = "0.1"
tokio-retry = "0.1"
uuid = { version = "0.6", features = ["serde", "v4"] }
url = "1.7.0"
chrono = { version = "0.4.4", features = ["serde"] }

grin_api = { path = "../api" }
grin_core = { path = "../core" }
grin_keychain = { path = "../keychain" }
grin_store = { path = "../store" }
grin_util = { path = "../util" }

[dev-dependencies]
grin_chain = { path = "../chain" }
grin_store = { path = "../store" }
