[package]
name = "grin_wallet"
version = "0.4.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = '..'
publish = false

[dependencies]
blake2-rfc = "0.2"
byteorder = "1"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hyper = "0.12"
prettytable-rs = "0.7"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
term = "0.5"
tokio = "0.1.7"
tokio-core = "0.1"
tokio-retry = "0.1"
uuid = { version = "0.6", features = ["serde", "v4"] }
url = "1.7.0"
chrono = { version = "0.4.4", features = ["serde"] }

grin_api = { path = "../api", version = "0.4.1" }
grin_core = { path = "../core", version = "0.4.1" }
grin_keychain = { path = "../keychain", version = "0.4.1" }
grin_store = { path = "../store", version = "0.4.1" }
grin_util = { path = "../util", version = "0.4.1" }

[dev-dependencies]
grin_chain = { path = "../chain", version = "0.4.1" }
grin_store = { path = "../store", version = "0.4.1" }
