[package]
name = "grin_core-fuzz"
version = "0.0.3"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
publish = false
edition = "2018"

[dependencies]
libfuzzer-sys = "0.4.0"
grin_core = { path = ".."}
grin_keychain = { path = "../../keychain"}

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "transaction_read_v1"
path = "fuzz_targets/transaction_read_v1.rs"

[[bin]]
name = "transaction_read_v2"
path = "fuzz_targets/transaction_read_v2.rs"

[[bin]]
name = "gen-corpus"
path = "src/main.rs"

[[bin]]
name = "block_read_v1"
path = "fuzz_targets/block_read_v1.rs"

[[bin]]
name = "block_read_v2"
path = "fuzz_targets/block_read_v2.rs"

[[bin]]
name = "compact_block_read_v1"
path = "fuzz_targets/compact_block_read_v1.rs"

[[bin]]
name = "compact_block_read_v2"
path = "fuzz_targets/compact_block_read_v2.rs"
